--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li>Register</li>
             <li>Login</li>
+            <li>Option</li>
         </ul>
     </nav>
 </body>
