--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <nav class="nav-bar">
         <ul>
-            <li>Register</li>
-            <li>Login</li>
+            <li><button>Register</button></li>
+            <li><button>Login</button></li>
         </ul>
     </nav>
+    <hr>
+    
 </body>
 </html>
